import { render, screen } from '@testing-library/react';
import { describe, expect, it, vi } from 'vitest';
import { Toggle } from './Toggle';

describe('Toggle', () => {
  const renderBasicToggle = (props = {}) => {
    return render(
      <Toggle data-testid="toggle" {...props}>
        Test content
      </Toggle>
    );
  };

  describe('Snapshots', () => {
    it('matches default snapshot', () => {
      const { container } = renderBasicToggle();
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches disabled state snapshot', () => {
      const { container } = renderBasicToggle({ disabled: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches active state snapshot', () => {
      const { container } = renderBasicToggle({ active: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches hover state snapshot', () => {
      const { container } = renderBasicToggle({ hover: true });
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  describe('Basic Functionality', () => {
    it('renders correctly', () => {
      renderBasicToggle();
      expect(screen.getByTestId('toggle')).toBeInTheDocument();
    });
  });

  describe('States', () => {
    it('handles disabled state correctly', () => {
      renderBasicToggle({ disabled: true });
      const element = screen.getByTestId('toggle');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for disabled state
    });
    it('handles active state correctly', () => {
      renderBasicToggle({ active: true });
      const element = screen.getByTestId('toggle');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for active state
    });
    it('handles hover state correctly', () => {
      renderBasicToggle({ hover: true });
      const element = screen.getByTestId('toggle');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for hover state
    });
  });

  describe('Accessibility', () => {
    it.skip('can be focused - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderBasicToggle();
      const element = screen.getByTestId('toggle');
      expect(element).toBeInTheDocument();
      // TODO: Add specific ARIA attribute tests based on component type
    });

    it.skip('supports keyboard navigation - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('announces changes to screen readers', () => {
      renderBasicToggle();
      // TODO: Add screen reader announcement tests
      expect(screen.getByTestId('toggle')).toBeInTheDocument();
    });

    it('respects reduced motion preferences', () => {
      renderBasicToggle();
      // TODO: Add reduced motion tests
      expect(screen.getByTestId('toggle')).toBeInTheDocument();
    });
  });

  describe('Custom Styling and Props', () => {
    it('accepts custom className', () => {
      renderBasicToggle({ className: 'custom-class' });
      const element = screen.getByTestId('toggle');
      expect(element).toHaveClass('custom-class');
    });

    it('forwards refs correctly', () => {
      const ref = vi.fn();
      renderBasicToggle({ ref });
      // Ref forwarding test - environment dependent
      // expect(ref).toHaveBeenCalledWith(expect.any(HTMLElement));
    });

    it('spreads additional props', () => {
      renderBasicToggle({ 'data-custom': 'test-value' });
      const element = screen.getByTestId('toggle');
      expect(element).toHaveAttribute('data-custom', 'test-value');
    });
  });

  describe('Edge Cases', () => {
    it('handles undefined props gracefully', () => {
      renderBasicToggle({ children: undefined });
      expect(screen.getByTestId('toggle')).toBeInTheDocument();
    });

    it('handles null props gracefully', () => {
      renderBasicToggle({ children: null });
      expect(screen.getByTestId('toggle')).toBeInTheDocument();
    });

    it('handles empty string props', () => {
      renderBasicToggle({ className: '' });
      expect(screen.getByTestId('toggle')).toBeInTheDocument();
    });

    it('handles rapid prop changes', () => {
      const { rerender } = renderBasicToggle({ className: 'class1' });
      rerender(<Toggle data-testid="toggle" className="class2" />);
      const element = screen.getByTestId('toggle');
      expect(element).toHaveClass('class2');
    });

    it('handles complex nested content', () => {
      render(
        <Toggle data-testid="toggle">
          <div>
            <span>Nested content</span>
            <p>More content</p>
          </div>
        </Toggle>
      );
      expect(screen.getByTestId('toggle')).toBeInTheDocument();
    });

    it('maintains functionality with many children', () => {
      render(
        <Toggle data-testid="toggle">
          {Array.from({ length: 100 }, (_, i) => (
            <div key={i}>Item {i}</div>
          ))}
        </Toggle>
      );
      expect(screen.getByTestId('toggle')).toBeInTheDocument();
    });

    it('handles component unmounting cleanly', () => {
      const { unmount } = renderBasicToggle();
      expect(() => unmount()).not.toThrow();
    });

    it('preserves functionality after remounting', () => {
      const { unmount } = renderBasicToggle();
      unmount();
      renderBasicToggle();
      expect(screen.getByTestId('toggle')).toBeInTheDocument();
    });
  });
});

// TODO: Review and customize generated tests based on component-specific requirements
// TODO: Add component-specific interaction tests
// TODO: Verify all variant combinations work correctly
// TODO: Test integration with form libraries if applicable
// TODO: Add performance tests for complex components
