// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle > Snapshots > matches active state snapshot 1`] = `
<button
  aria-pressed="false"
  class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=on]:[background-color:hsl(var(--surface-interactive))] data-[state=on]:[color:hsl(var(--content-inverse))] bg-transparent h-10 px-3"
  data-state="off"
  data-testid="toggle"
  type="button"
>
  Test content
</button>
`;

exports[`Toggle > Snapshots > matches default snapshot 1`] = `
<button
  aria-pressed="false"
  class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=on]:[background-color:hsl(var(--surface-interactive))] data-[state=on]:[color:hsl(var(--content-inverse))] bg-transparent h-10 px-3"
  data-state="off"
  data-testid="toggle"
  type="button"
>
  Test content
</button>
`;

exports[`Toggle > Snapshots > matches disabled state snapshot 1`] = `
<button
  aria-pressed="false"
  class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=on]:[background-color:hsl(var(--surface-interactive))] data-[state=on]:[color:hsl(var(--content-inverse))] bg-transparent h-10 px-3"
  data-disabled=""
  data-state="off"
  data-testid="toggle"
  disabled=""
  type="button"
>
  Test content
</button>
`;

exports[`Toggle > Snapshots > matches hover state snapshot 1`] = `
<button
  aria-pressed="false"
  class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=on]:[background-color:hsl(var(--surface-interactive))] data-[state=on]:[color:hsl(var(--content-inverse))] bg-transparent h-10 px-3"
  data-state="off"
  data-testid="toggle"
  type="button"
>
  Test content
</button>
`;
